# webauth

./: README  README.md
BasicAccessAuthentication/: Makefile  app.py  pyproject.toml
JWTLocalStorage/: app.py  pyproject.toml
JWTLocalStorage/templates/: login.html
OICD/: .gitignore  Makefile  SECRETS.blank  db.py  pyproject.toml  schema.sql  user.py
SessionCookieVanilla/: Makefile  app.py  form.py  pyproject.toml  user.py
SessionCookieVanilla/templates/: login.html
