[tool.poetry]
name = "basicaccessauthentication"
version = "0.1.0"
description = ""
authors = ["zrthstr <zrth1k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.4"
Flask-HTTPAuth = "^4.4.0"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
