[tool.poetry]
name = "jwtvanilla"
version = "0.1.0"
description = ""
authors = ["zrthstr <zrth1k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "1.1.4"
Flask-JWT-Extended = "^4.2.1"
pyOpenSSL = "^20.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
